--- a/01-intro-exercises/001-mailing-address/index.html
+++ b/01-intro-exercises/001-mailing-address/index.html
@@ -25,7 +25,6 @@
   </head>
   <body>
     <h1>Exercise 1: Mailing Address</h1>
-    <script src="./src/mailing-address.js"></script>
-    <script src="./src/index.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
