--- a/01-intro-exercises/002-hello/index.html
+++ b/01-intro-exercises/002-hello/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>Exercise 2: Hello</h1>
-    <script src=""></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
