refactor: change scripts to bundle.js script

--- a/01-intro-exercises/003-room-area/index.html
+++ b/01-intro-exercises/003-room-area/index.html
@@ -26,7 +26,6 @@
 
   <body>
     <h1>Exercise 3: Area of a room</h1>
-    <script src="./src/computeRoomArea.js"></script>
-    <script src="./src/index.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
